@@ -1,5 +1,5 @@
 ;; Machine description of the Renesas M32R cpu for GNU C compiler
-;; Copyright (C) 1996, 1997, 1998, 1999, 2001, 2003, 2004
+;; Copyright (C) 1996, 1997, 1998, 1999, 2001, 2003, 2004, 2005
 ;  Free Software Foundation, Inc.
 
 ;; This file is part of GCC.
